target/.metadata/.plugins/org.eclipse.cdt.ui/034_HAL_MODBUS_RS485.build.log
07:42:17 **** Build of configuration Debug for project 034_HAL_MODBUS_RS485 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/modbus.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/modbus.d" -MT"Core/Src/modbus.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/modbus.o"
../Core/Src/modbus.c: In function 'ProcessModbus':
../Core/Src/modbus.c:115:9: warning: implicit declaration of function 'RxDataAvailable' [-Wimplicit-function-declaration]
  115 |     if (RxDataAvailable())
      |         ^~~~~~~~~~~~~~~
../Core/Src/modbus.c: In function 'DoSlaveTx':
../Core/Src/modbus.c:147:2: warning: implicit declaration of function 'ModBus_UART_String' [-Wimplicit-function-declaration]
  147 |  ModBus_UART_String(Tx_Buf,Tx_Buf_Size);
      |  ^~~~~~~~~~~~~~~~~~
../Core/Src/modbus.c: In function 'RxRTU':
../Core/Src/modbus.c:158:30: warning: implicit declaration of function 'CheckModbusBufferComplete' [-Wimplicit-function-declaration]
  158 |     ReceiveBufferControl    =CheckModbusBufferComplete();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/modbus.c:162:38: error: 'ReceiveBuffer' undeclared (first use in this function); did you mean 'ReceiveBufferControl'?
  162 |         Rx_Data.modbusSlaveAddress = ReceiveBuffer[0];
      |                                      ^~~~~~~~~~~~~
      |                                      ReceiveBufferControl
../Core/Src/modbus.c:162:38: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/modbus.c:170:24: error: 'ReceiveCounter' undeclared (first use in this function)
  170 |         for(i = 2; i < ReceiveCounter ; i++)
      |                        ^~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/modbus.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

07:42:18 Build Failed. 3 errors, 3 warnings. (took 961ms)

